--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <a href="#"><i class='fab fa-github' style='font-size:24px'></i></a>
             </div>
             <br>
-            <p>copyright &copy;2022 TheCafeCoffee. designed by <span>Saakshi Kale</span></p>
+            <p>copyright &copy;2022 MyPortfolio. designed by <span>Saakshi Kale</span></p>
         </div>
     </footer>
 </body>
